# qtcloud-data-provider

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/cruds/: dataset.py
app/dependencies/: auth.py  db.py
app/models/: dataset.py  fields.py
app/orms/: dataset.py
app/routers/: dataset.py
app/schemas/: __init__.py  base.py  dataset.py  record.py  schema.py
integrated_tests/: dataset.http
tests/: test_api_dataset.py  test_cruds_dataset.py  test_routers_dataset.py  test_schemas_dataset.py
tests/routers/: test_dataset.py  test_schema.py
