[tool.poetry]
name = "qtcloud-data-server-fastapi"
version = "0.1.0-alpha.1"
description = "量潮数据云FastAPI客户端"
authors = ["QuantTide Inc. <opensource@quanttide.com>"]
license = "Business Source License"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
