[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "qtcloud-data-server"
version = "0.1.0-alpha.1"
description = "量潮数据云服务端"
authors = ["QuantTide Inc. <opensource@quanttide.com>"]
license = "Business Source License"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.5.2"
sqlalchemy = "^2.0.22"
fastapi-restful = "^0.5.0"
typing-inspect = "^0.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
coverage = "^7.3.2"
pre-commit = "^3.5.0"
httpx = "^0.25.2"
pytest-asyncio = "^0.21.1"
ruff = "^0.1.6"
mypy = "^1.7.1"

[tool.ruff]
exclude = [
    "tests",
    "integrated_tests",
    ".pre-commit-config.yaml",
]
